# open-ai-yt-script-backend

./: pyproject.toml  requirements.txt
src/my_app/: __init__.py  agent.py  main.py  procfile  utils.py
