[project]
name = "my-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "M-Frasat Ali Gujjar", email = "frasatali120@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "openai>=1.82.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
    "yt-dlp>=2025.5.22",
]

[tool.uv]
entrypoint = "src/my_app/main.py"

[project.scripts]
my-app = "my_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
